@@ -294,6 +294,21 @@ section: design
 </code></pre>
   </div>
 </div>
+<div class="flex flex-spacebetween mb2 onmobile-flex-column">
+  <div class="w49 pt0-5">
+    <div class="block-info-standard-success">
+      Here a block with success. <br>
+      Lorem ipsum dolor si amet.
+    </div>
+  </div>
+  <div class="w49 aligncenter flex-self-vcenter">
+    <pre class=" language-markup"><code>&lt;div class="<strong>block-info-standard-success</strong>"&gt;
+  Here a block with success.&lt;br&gt;
+  Lorem ipsum dolor si amet.
+&lt;/div&gt;
+</code></pre>
+  </div>
+</div>
 
 <div class="flex flex-spacebetween mb2 onmobile-flex-column">
   <div class="w49 pt0-5">
@@ -336,6 +351,23 @@ section: design
   </div>
   <div class="w49 aligncenter flex-self-vcenter">
     <pre class=" language-markup"><code>&lt;div class="<strong>block-info-warning</strong>"&gt;
+  Here a block with important information.&lt;br&gt;
+  Lorem ipsum dolor si amet.
+&lt;/div&gt;
+</code></pre>
+  </div>
+</div>
+
+
+<div class="flex flex-spacebetween mb2 onmobile-flex-column">
+  <div class="w49 pt0-5">
+    <div class="block-info-success">
+      Here a block with important information (success). <br>
+      Lorem ipsum dolor si amet.
+    </div>
+  </div>
+  <div class="w49 aligncenter flex-self-vcenter">
+    <pre class=" language-markup"><code>&lt;div class="<strong>block-info-success</strong>"&gt;
   Here a block with important information.&lt;br&gt;
   Lorem ipsum dolor si amet.
 &lt;/div&gt;
