@@ -3,6 +3,7 @@
 ## New
 
 - added icon `shape-lock`
+- added `block-info-success`/`block-info-standard-success` in containers
 
 
 # [1.6.9] - 2019-05-22
